[workspace]
members = ["crates/*"]
default-members = ["crates/liveview-backend"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
description = "LiveView backend"
authors = ["liveview team"]
license = "MIT"
readme = "README.md"
publish = false

[workspace.dependencies]
eyre = "0.6.12"
alloy = "0.6.4"
axum = "0.7.9"
axum-extra = "0.9.6"
clap = "4.5.21"
serde = "1.0.215"
serde_json = "1.0.133"
tokio = "1.41.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = "0.6.2"
