[workspace]
members = ["crates/*"]
default-members = ["crates/liveview-backend"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
description = "LiveView backend"
authors = ["liveview team"]
license = "MIT"
readme = "README.md"
publish = false

[workspace.dependencies]
eyre = "0.6.12"
alloy = "0.7.3"
axum = "0.7.9"
axum-extra = "0.9.6"
clap = "4.5.23"
serde = "1.0.215"
serde_json = "1.0.133"
tokio = "1.42.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tower-http = "0.6.2"
tokio-tungstenite = "0.24.0"
socketioxide = "0.15.1"
chrono = "0.4.39"
futures-util = "0.3.31"
url = "2.5.4"
reqwest = "0.12.9"
