[package]
name = "liveview-backend"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
publish.workspace = true

[dependencies]
alloy = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["ws", "macros", "tracing"] }
axum-extra.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
eyre.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
socketioxide = { workspace = true, features = ["tracing", "state"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tokio-tungstenite.workspace = true
tower-http = { workspace = true, features = ["cors", "trace"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
