[package]
name = "liveview-backend"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
publish.workspace = true

[dependencies]
alloy = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["macros", "tracing"] }
axum-extra.workspace = true
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive", "env"] }
eyre.workspace = true
futures-util.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
socketioxide = { workspace = true, features = ["tracing", "state"] }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "fs",
] }
tokio-tungstenite.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["cors", "trace"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true, features = ["serde"] }
